fix FAILED output
svn path=/trunk/kde-common/release/; revision=758233

--- a/Makefile.docu
+++ b/Makefile.docu
@@ -9,6 +9,6 @@ DOCBOOK_DST=$(patsubst %.docbook, %.cache.bz2, $(DOCBOOK_SRC))
 .PHONY: all
 
 %.cache.bz2: %.docbook
-	@$(MEINPROC) --cache $@ $< || echo $< >> $(SOURCE_DIR)/FAILED
+	@$(MEINPROC) --cache $@ $< || echo $(shell dirname $<) >> $(SOURCE_DIR)/FAILED
 
 all: $(DOCBOOK_DST)
